tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__Saltyfromallthes-AAAAAAAAAAAAAAAAAAAMjg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3214,
  "prerequisites": [
    3213
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you are salty about the ingredients needed to purify silicon, I got good news for you! You can recover all of the chlorine and sodium you used by electrolyzing the salt you got!\n\n[note]You can also use zinc instead of sodium, the first reaction is longer but the recycling is much cheaper.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lSalty from all the silicon?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3213
  ],
  "rewards": [],
  "tasks": []
}
