tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__SeedOil-AAAAAAAAAAAAAAAAAAADUA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 848,
  "prerequisites": [
    1324
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Pam's peanuts are a good seed oil source, and can be sped up with sprinklers. Or you can use IC2 crops to get Rapeseed. Another option is Forestry tree nuts such as Hazelnuts, Butternuts, or the King of nuts, coconuts. Or you can be lame and get them from regular seeds like wheat seeds.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lSeed Oil",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1324
  ],
  "rewards": [],
  "tasks": []
}
