tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__SiliconSolarGrad-AAAAAAAAAAAAAAAAAAAG_A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1788,
  "optional_prerequisites": [
    1492,
    3213
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "Whichever path you followed, you now have the Solar Grade Silicon Dust. You want to smelt it into ingots to make plates for Transistors, but you will also need some to make Silicon Boules.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lSilicon Solar Grade",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
