tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__SiliconTetrachlo-AAAAAAAAAAAAAAAAAAAMjA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3212,
  "prerequisites": [
    3211
  ],
  "properties": {
    "auto_claim": false,
    "desc": "However, the raw silicon dust you obtained is not pure enough! We will need to work on that. There are two reasonable options to do so. Let us look at the first one here. Don't worry, this is just a simple two step process. First let us start by reacting it with some chlorine in a chemical reactor.",
    "global_share": true,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lSilicon Tetrachloride",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3211
  ],
  "rewards": [],
  "tasks": []
}
