tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__SimpleItemTransf-AAAAAAAAAAAAAAAAAAAAmQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 153,
  "prerequisites": [
    1148
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Translocators can only transfer items over a distance of 1 block. But they're quite cheap, and a good solution to building compact machine setups. They include a free simple item filter which can be enabled on the input or output side. And they support multiple inputs and outputs! Glowstone will make it transfer faster - try investigating other upgrades.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lSimple Item Transfer",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1148
  ],
  "rewards": [],
  "tasks": []
}
