tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__SimpleRFpowerSol-AAAAAAAAAAAAAAAAAAAAgw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 131,
  "prerequisites": [
    129
  ],
  "properties": {
    "auto_claim": false,
    "desc": "By simply burning coal as fuel, this machine produces RF power. Enough for a basic machine setup. This machine will also accept compressed and multiple-compressed blocks. Want to burn something for 250+ days? Also, with double or octadic capacitors the output will increase and efficiency will improve.\n\nGT wiring can convert EU to RF, but not the other way around. Note that with the eNet changes a GT wire network will need at least one GT energy consumer - a machine hull of the matching voltage will work.\n\nEnder IO machines and GT cables and Wires can be left safely out in the rain.\n\nIt might be useful for Genetics machines since they consume excessive power when attached to GT wiring - Forestry and EnderIO machines work fine (except for the Thermionic Fabricator). Or use a Capacitor Bank.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lSimple RF power: Solid",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    129
  ],
  "rewards": [],
  "tasks": []
}
